tests/integration/snapshots/integration__conformance__n_string_with_trailing_garbage.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
""x
stdout ---

stderr ---
error: unexpected character `x`. expected start of a json value
 --> stdin:1:3
  |
1 | ""x
  |   ^
